--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             <div class="jumbotron">
 			  <h1 class="display-5" style="text-align: left;">Embalagem Temoso</h1>
 			  <p class="lead" style="text-align: left; color: #6f1541">&#8212; "Incluindo pessoas, agregamos valores!"</p>
+<!--			  <p class="lead" style="text-align: left; color: #6f1541">&#8212; "Incluindo pessoas, agregamos valores!"</p>-->
 
 				<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 				  <div class="carousel-inner">
