--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
             <div class="jumbotron">
 			  <h1 class="display-5" style="text-align: left;">Embalagem Temoso</h1>
 			  <p class="lead" style="text-align: left; color: #6f1541">&#8212; "Incluindo pessoas, agregamos valores!"</p>
-<!--			  <p class="lead" style="text-align: left; color: #6f1541">&#8212; "Incluindo pessoas, agregamos valores!"</p>-->
 
 				<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 				  <div class="carousel-inner">
@@ -178,24 +177,16 @@
 					</div>
 				  </div>
 				</div>
-			  <hr class="my-4">
-				<div class="card" style="width: 38rem;">
-				  <div class="card-body">
-					  <p class="text-justify">
-						O redesenho da embalagem tem como princípio buscar
-						mais visibilidade para o produto, principalmente
-						no ponto de venda, e destacar-se pela integração
-						de pessoas com diversidades funcionais,
-						mais especificamente deficiências visuais.<br/><br/>
+				<div class="col-md-0 col-lg-4 pl-md-0 py-4">
+    				<div class="row justify-content-start pb-0">
+		          <div class="col-md-12 heading-section ftco-animate">
+					  <p style="text-align: left">O redesenho da embalagem tem como princípio buscar mais visibilidade para o produto, principalmente no ponto de venda, e destacar-se pela integração de pessoas com diversidades funcionais, mais especificamente deficiências visuais.</p>
+					  <p style="text-align: left">A caixa foi projetada e reestruturada para adequar-se às normas legais do braille em embalagens. Além disso, o projeto gráfico foi baseado em cartazes e letterings de filmes da época na qual a empresa foi fundada – anos 60.</p>
+		          </div>
+		        </div>
+					</div></div>
 
-						A caixa foi projetada e reestruturada para adequar-se
-						às normas legais do braille em embalagens. Além disso,
-						o projeto gráfico foi baseado em cartazes e letterings
-						de filmes da época na qual a empresa foi fundada
-						– anos 60.
-					</p>
-				  </div>
-				</div>
+			  <hr class="my-4">
 				<div class="row no-gutters">
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/01_temoso.jpg);">
@@ -222,24 +213,22 @@
 	    				</div>
     				</div>
     			</div>
-    		</div><br/>
-				<div class="card" style="width: 38rem;">
-				  <div class="card-body">
-					  <small><p class="text-justify">
-						Trabalho acadêmico individual - ESPM.<br/>
-						4° semestre, 2019/1<br/>
-						Disciplina e orientador: Projeto IV, Cláudia Moura e Mód. Tipografia aplicada - Lettering, Marcos Mello.<br/>
 
-						<b>Briefing:</b> Fazer o redesenho da embalagem de grampos de
-						cabelo <b>Temoso</b> e um lettering que represente a marca, utilizando este como base para os demais elementos gráficos presentes, além de relacioná-lo ao
-					</p></small>
-				  </div>
-				</div>
-			  <hr class="my-4">
+    		</div><br/>
+						<div class="col-md-0 col-lg-4 pl-md-0 py-4">
+    				<div class="row justify-content-start pb-0">
+		          <div class="col-md-12 heading-section ftco-animate">
+					  <small><p style="text-align: left">Trabalho acadêmico individual - ESPM.</p></small>
+					  <small><p style="text-align: left">4° semestre, 2019/1</p></small>
+					  <small><p style="text-align: left">Disciplina e orientador: Projeto IV, Cláudia Moura e Mód. Tipografia aplicada - Lettering, Marcos Mello.</p></small>
+					  <small><p style="text-align: left">Briefing: Fazer o redesenho da embalagem de grampos de cabelo Temoso e um lettering que represente a marca, utilizando este como base para os demais elementos gráficos presentes, além de relacioná-lo ao</p></small>
+		          </div>
+		        </div>
+					</div></div>
 			</div>
-          </div>
-        </div>
-    	</div>
+			<hr class="my-4">
+		</div>
+
     </section>
 
     <footer class="ftco-footer ftco-section">
