--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@
 	          <li class="nav-item"><a href="#" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>Sobre</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Curriculum</span></a></li>
-	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projetos</span></a></li>
+				<li>
+					<div style="padding-top: 10px; padding-left: 4px" class="dropdown show">
+					  <a href="#projects-section" id="dropdownMenuLink" type="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+						Projetos
+					  </a>
+
+					  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+						<a class="dropdown-item" href="#temoso">Embalagem Temoso</a>
+						<a class="dropdown-item" href="#chega">Jogo Chega Junto</a>
+						<a class="dropdown-item" href="#fly">FlyaKite</a>
+					  </div>
+					</div>
+				</li>
 	        </ul>
 	      </div>
 	    </div>
@@ -85,18 +97,13 @@
 		            <p>Sou desenhada e designada para a universalidade do compreender, do entender e do empatizar; sempre pensando nos aspectos do Design Universal, para todos os projetos.</p>
 		            <p>Traço linhas e metas para poder estourar, em nanquim, gotas de inclusão que incorporam todos os raios de luz em meu negrume, colorindo meus cabelos.</p>
 		            <p>Reúno conteúdos – conhecimentos – e pratico integrá-los dentro de minha maior paixão, o Design.</p>
-		            <p>Esta é ela, esta sou eu, esta é quem eu quero ser.</p>
-		            <ul class="about-info mt-4 px-md-0 px-2">
-						<li class="d-flex"><span>Email:</span> <span><a href="mailto:vkbrandt@gmail.com">vkbrandt@gmail.com</a></span></li>
-		            	<li class="d-flex"><span>Telefone: </span> <span>+55 (12) 98169-6846</span></li>
-		            </ul>
+		            <p>Esta é ela, esta sou eu, esta é quem eu quero ser.</p><br/>
+		            <span></span> <span><a href="mailto:vkbrandt@gmail.com">vkbrandt@gmail.com</a></span><br/>
+		            <span></span> <span>+55 (12) 98169-6846</span><br/><br/><br/>
+				    <p><a href="docs/cv_yumi.pdf" target="_blank" >Download CV</a></p>
+
 		          </div>
 		        </div>
-	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
-              <div class="text">
-                <p><a href="docs/cv_yumi.pdf" target="_blank" >Download CV</a></p>
-              </div>
-	          </div>
 	        </div>
         </div>
     	</div>
@@ -166,8 +173,9 @@
           	<h1 class="big big-2"></h1>
             <h2 class="mb-5">Projetos</h2>
 		  	<hr class="my-4">
+
             <div class="jumbotron">
-			  <h1 class="display-5" style="text-align: left;">Embalagem Temoso</h1>
+			  <h1 id="temoso" class="display-5" style="text-align: left;">Embalagem Temoso</h1>
 			  <p class="lead" style="text-align: left; color: #6f1541">&#8212; "Incluindo pessoas, agregamos valores!"</p>
 
 				<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -177,33 +185,59 @@
 					</div>
 				  </div>
 				</div>
-				<div class="col-md-0 col-lg-4 pl-md-0 py-4">
-    				<div class="row justify-content-start pb-0">
-		          <div class="col-md-12 heading-section ftco-animate">
-					  <p style="text-align: left">O redesenho da embalagem tem como princípio buscar mais visibilidade para o produto, principalmente no ponto de venda, e destacar-se pela integração de pessoas com diversidades funcionais, mais especificamente deficiências visuais.</p>
-					  <p style="text-align: left">A caixa foi projetada e reestruturada para adequar-se às normas legais do braille em embalagens. Além disso, o projeto gráfico foi baseado em cartazes e letterings de filmes da época na qual a empresa foi fundada – anos 60.</p>
-		          </div>
-		        </div>
-					</div></div>
-
 			  <hr class="my-4">
+				<div class="card" style="width: 38rem;">
+				  <div class="card-body">
+					  <p class="text-justify">
+						O redesenho da embalagem tem como princípio buscar
+						mais visibilidade para o produto, principalmente
+						no ponto de venda, e destacar-se pela integração
+						de pessoas com diversidades funcionais,
+						mais especificamente deficiências visuais.<br/><br/>
+
+						A caixa foi projetada e reestruturada para adequar-se
+						às normas legais do braille em embalagens. Além disso,
+						o projeto gráfico foi baseado em cartazes e letterings
+						de filmes da época na qual a empresa foi fundada
+						– anos 60.
+					</p>
+				  </div>
+				</div>
+
 				<div class="row no-gutters">
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/01_temoso.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="#"></a></h3>
-	    				</div>
+    				<a href="" data-toggle="modal" data-target="#exampleModalCenter">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/16_temoso_.jpg);">
+							<div class="overlay"></div></a>
     				</div>
   				</div>
+
   				<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/02_temoso.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/17_temoso.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="#"></a></h3>
 	    				</div>
     				</div>
   				</div>
+
+    			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/18_temoso.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#"></a></h3>
+	    				</div>
+    				</div>
+    			</div>
+
+    			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/15_temoso.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#"></a></h3>
+	    				</div>
+    				</div>
+    			</div>
 
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/03_temoso.jpg);">
@@ -214,21 +248,157 @@
     				</div>
     			</div>
 
+    			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/08_temoso.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#"></a></h3>
+	    				</div>
+    				</div>
+    			</div>
     		</div><br/>
-						<div class="col-md-0 col-lg-4 pl-md-0 py-4">
-    				<div class="row justify-content-start pb-0">
-		          <div class="col-md-12 heading-section ftco-animate">
-					  <small><p style="text-align: left">Trabalho acadêmico individual - ESPM.</p></small>
-					  <small><p style="text-align: left">4° semestre, 2019/1</p></small>
-					  <small><p style="text-align: left">Disciplina e orientador: Projeto IV, Cláudia Moura e Mód. Tipografia aplicada - Lettering, Marcos Mello.</p></small>
-					  <small><p style="text-align: left">Briefing: Fazer o redesenho da embalagem de grampos de cabelo Temoso e um lettering que represente a marca, utilizando este como base para os demais elementos gráficos presentes, além de relacioná-lo ao</p></small>
-		          </div>
-		        </div>
-					</div></div>
+			  <div class="card" style="width: 38rem;">
+				  <div class="card-body">
+					  <small><p class="text-justify">
+						Trabalho acadêmico individual - ESPM.<br/>
+						4° semestre, 2019/1<br/>
+						Disciplina e orientador: Projeto IV, Cláudia Moura e Mód. Tipografia aplicada - Lettering, Marcos Mello.<br/>
+					</p></small>
+				  </div>
+				</div>
+			  <hr class="my-4">
 			</div>
-			<hr class="my-4">
-		</div>
+				<div class="jumbotron">
+			  <h1 id="chega" class="display-5" style="text-align: left;">Jogo Chega Junto</h1>
+			  <p class="lead" style="text-align: left; color: #6f1541">&#8212; "Que todos possamos jogar juntos!"</p>
 
+				<div id="carouselExampleSlidesTemoso" class="carousel slide" data-ride="carousel">
+				  <div class="carousel-inner">
+					<div class="carousel-item active">
+					  <img class="d-block w-100" src="img/01_chega.jpg">
+					</div>
+				  </div>
+				</div>
+			  <hr class="my-4">
+
+					<div class="card" style="width: 38rem;">
+				  <div class="card-body">
+					  <p class="text-justify">
+						O jogo Chega Junto é uma versão do conhecido jogo dos pares, porém com sua especificidade: ele é inclusivo. Ele foi pensado através da análise e estudo da Fundação Dorina Nowill e possibilidades de se adequar o jogo às necessidades das pessoas que são assistidas pela instituição.<br/><br/>
+
+						Com cartas de diferentes cores, formas e texturas, e com o braille, com as letras e com os números, o jogo não somente desenvolve o raciocínio das crianças com a associação das cartas, mas também possibilita que todos participem e joguem.
+					</p>
+				  </div>
+				</div>
+				<div class="row no-gutters">
+    			<div class="col-md-4">
+    				<a href="" data-toggle="modal" data-target="#exampleModalCenter">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/06_chega.JPG);">
+							<div class="overlay"></div></a>
+    				</div>
+  				</div>
+
+  				<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/03_chega.JPG);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#"></a></h3>
+	    				</div>
+    				</div>
+  				</div>
+
+    			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/04_chega.JPG);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#"></a></h3>
+	    				</div>
+    				</div>
+    			</div>
+    		</div><br/>
+										<div class="card" style="width: 38rem;">
+				  <div class="card-body">
+					  <small><p class="text-justify">
+						Trabalho acadêmico - ESPM.<br/>
+						5° semestre, 2019/2<br/>
+						Disciplina e orientador: Projeto IV, Cláudia Moura.<br/>
+						Grupo: Verônica Brandt e Vinícius Sperduti.<br/>
+
+					  </p></small>
+				  </div>
+				</div>
+			  <hr class="my-4">
+			</div>				<div class="jumbotron">
+			  <h1 id="fly" class="display-5" style="text-align: left;">FlyaKite</h1>
+			  <p class="lead" style="text-align: left; color: #6f1541">
+			  	  "Let's go fly a kite and send it soaring<br>
+Up through the atmosphere<br>
+Up where the air is clear!<br>
+Oh, let's go fly a kite"<br><br>
+
+				  <small>Let's go fly a kite - compositores: Richard M. Sherman e Robert B. Sherman</small><br/><small>Mary Poppins, Disney.</small>
+			  </p>
+
+				<div id="carouselExampleSlidesAlguma" class="carousel slide" data-ride="carousel">
+				  <div class="carousel-inner">
+					<div class="carousel-item active">
+					  <img class="d-block w-100" src="img/01_fly.jpg">
+					</div>
+				  </div>
+				</div>
+			  <hr class="my-4">
+			<div class="card" style="width: 38rem;">
+				  <div class="card-body">
+					  <p class="text-justify">
+A fonte flyaKite foi desenvolvida para adequar-se a textos corridos, tendo uma boa legibilidade mesmo quando se apresenta com corpo pequeno e em trechos longos. Um dos fatores que contribuem com a boa leitura do tipo são suas características que, em conjunto, estruturam as particularidades da fonte.<br/><br/>
+
+Seu remate lacrimal, assim como seus cumes caligráficos e curvos, dão uma forma mais orgânica para as letras e são elementos diferenciais da fonte, trazendo mais dinamicidade ao texto. O contraste forte e o eixo humanístico suave trazem equilíbrio e harmonia nas composições na qual a fonte irá ser inserida, tendo um peso maior por ser uma fonte relativamente consensada.<br/><br/>
+
+É uma fonte pensada e criada para livros de ficção científica, por isso seu nome remete ao empinar de uma pipa (fly a kite em inglês), para que a imaginação e os sentimentos sejam levados junto com a brisa soprada pelos autores.<br/><br/>
+
+					</p>
+				  </div>
+				</div>
+				<div class="row no-gutters">
+    			<div class="col-md-4">
+    				<a href="" data-toggle="modal" data-target="#exampleModalCenter">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/02_fly.jpg);">
+							<div class="overlay"></div></a>
+    				</div>
+  				</div>
+
+  				<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/03_fly.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#"></a></h3>
+	    				</div>
+    				</div>
+  				</div>
+
+    			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/04_fly.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#"></a></h3>
+	    				</div>
+    				</div>
+    			</div>
+    		</div><br/>
+					<div class="card" style="width: 38rem;">
+				  <div class="card-body">
+					  <small><p class="text-justify">
+						Trabalho acadêmico individual - ESPM.<br/>
+						4° e 5° semestre, 2019/1 e 2019/2<br/>
+						Disciplina e orientador: Mód. Tipografia, Sub Mód. Desenho de Fontes e Tipografia Digital, Luciano Cardinali.<br/>
+
+					</p></small>
+				  </div>
+				</div>
+			  <hr class="my-4">
+			</div>
+          </div>
+        </div>
     </section>
 
     <footer class="ftco-footer ftco-section">
